--- a/cat_papers.html
+++ b/cat_papers.html
@@ -183,6 +183,33 @@ In ICLR 2018<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://github.com/brownvc/ganimorph/"><img src="teasers/Gokaslan2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Improving Shape Deformation in Unsupervised Image-to-Image Translation</strong>
+<p class="content"><a href="https://skylion007.github.io/">Aaron Gokaslan</a>, 
+<a href="http://vivekr.me/">Vivek Ramanujan</a>, 
+<a href="https://dritchie.github.io/">Daniel Ritchie</a>, 
+<a href="https://researchportal.bath.ac.uk/en/persons/kwang-in-kim/">Kwang In Kim</a>, 
+<a href="http://jamestompkin.com/">James Tompkin</a><br>
+In ECCV 2018<br>
+<strong><a href="https://arxiv.org/pdf/1808.04325.pdf">[Paper]</a></strong> 
+<strong><a href="https://github.com/brownvc/ganimorph/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="https://github.com/NVlabs/MUNIT"><img src="teasers/Huang2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Multimodal UNsupervised Image-to-image Translation</strong>
+<p class="content"><a href="http://www.cs.cornell.edu/~xhuang/">Xun Huang</a>, 
+<a href="http://mingyuliu.net/">Ming-Yu Liu</a>, 
+<a href="https://vision.cornell.edu/se3/people/serge-belongie/">Serge Belongie</a>, 
+<a href="http://jankautz.com/">Jan Kautz</a><br>
+In ECCV 2018<br>
+<strong><a href="https://arxiv.org/pdf/1804.04732.pdf">[Paper]</a></strong> 
+<strong><a href="https://github.com/NVlabs/MUNIT">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://people.eecs.berkeley.edu/~lingqi/publications/paper_fur2.pdf"><img src="teasers/Yan2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>An Efficient and Practical Near and Far Field Fur Reflectance Model</strong>
@@ -205,6 +232,18 @@ In SIGGRAPH 2017<br>
 In SIGGRAPH 2017<br>
 <strong><a href="https://arxiv.org/abs/1705.02997">[Paper]</a></strong> 
 <strong><a href="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/SIG17/lfv/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="https://github.com/mingyuliutw/UNIT"><img src="teasers/Liu2017.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Unsupervised Image-to-Image Translation Networks</strong>
+<p class="content"><a href="http://mingyuliu.net/">Ming-Yu Liu</a>, 
+<a href="http://www.iupr.com/tmb">Thomas Breuel</a>, 
+<a href="http://jankautz.com/">Jan Kautz</a><br>
+In NIPS 2017<br>
+<strong><a href="https://arxiv.org/pdf/1703.00848.pdf">[Paper]</a></strong> 
+<strong><a href="https://github.com/mingyuliutw/UNIT">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
