--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,16 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://github.com/AlexiaJM/RelativisticGAN"><img src="teasers/Jolicoeur-Martineau2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>The relativistic discriminator: a key element missing from standard GAN</strong>
+<p class="content"><a href="https://ajolicoeur.wordpress.com/">Alexia Jolicoeur-Martineau</a><br>
+In arXiv 2018<br>
+<strong><a href="https://arxiv.org/pdf/1807.00734.pdf">[Paper]</a></strong> 
+<strong><a href="https://github.com/AlexiaJM/RelativisticGAN">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="http://irc.cs.sdu.edu.cn/DSCarver/"><img src="teasers/Zhao2018.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>DSCarver: Decompose-and-Spiral-Carve for Subtractive Manufacturing</strong>
