--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,16 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/1802.08195"><img src="teasers/Gamaleldin2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Adversarial Examples that Fool both Computer Vision and Time-Limited Humans</strong>
+<p class="content">
+Gamaleldin F. Elsayed, Shreya Shankar, Brian Cheung, Nicolas Papernot, Alex Kurakin, Ian Goodfellow, Jascha Sohl-Dickstein<br>
+NIPS 2018<br>
+<strong><a href="https://arxiv.org/pdf/1802.08195">[Paper]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://github.com/AlexiaJM/RelativisticGAN"><img src="teasers/Jolicoeur-Martineau2018.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>The relativistic discriminator: a key element missing from standard GAN</strong>
