--- a/cat_papers.html
+++ b/cat_papers.html
@@ -285,6 +285,17 @@ In ICCV 2017<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/1705.02193"><img src="teasers/Thewlis2017.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Unsupervised learning of object landmarks by factorized spatial embeddings</strong>
+<p class="content"><a href="http://www.robots.ox.ac.uk/~jdt/">James Thewlis</a>, 
+<a href="http://homepages.inf.ed.ac.uk/hbilen/">Hakan Bilen</a>, 
+<a href="http://www.robots.ox.ac.uk/~vedaldi/">Andrea Vedaldi</a><br>
+In ICCV 2017<br>
+<strong><a href="https://arxiv.org/abs/1705.02193">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://github.com/phillipi/pix2pix"><img src="teasers/Isola2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Image-to-Image Translation with Conditional Adversarial Networks</strong>
