--- a/cat_papers.html
+++ b/cat_papers.html
@@ -249,6 +249,18 @@ In ECCV 2018<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://ps.is.tuebingen.mpg.de/publications/zuffi-cvpr-2018"><img src="teasers/Zuffi2018.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Lions and Tigers and Bears: Capturing Non-Rigid 3D Articulated Shape from Images</strong>
+<p class="content"><a href="https://ps.is.tuebingen.mpg.de/person/szuffi">Silvia Zuffi</a>, 
+<a href="https://people.eecs.berkeley.edu/~kanazawa/">Angjoo Kanazawa</a>, 
+<a href="https://ps.is.mpg.de/~black">Michael J. Black</a><br>
+In CVPR 2018<br>
+<strong><a href="http://files.is.tue.mpg.de/black/papers/zuffiCVPR2018.pdf">[Paper]</a></strong> 
+<strong><a href="https://ps.is.tuebingen.mpg.de/publications/zuffi-cvpr-2018">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://people.eecs.berkeley.edu/~lingqi/publications/paper_fur2.pdf"><img src="teasers/Yan2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>An Efficient and Practical Near and Far Field Fur Reflectance Model</strong>
@@ -1243,7 +1255,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in May 2019
+Last updated in Sep 2019
 <br>
 
       <div style="display:none">
