--- a/cat_papers.html
+++ b/cat_papers.html
@@ -118,7 +118,7 @@
                <td width="900" >
                   <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling, and synthesizing our feline friends becomes a more and more critical research problem these days, especially for our cat lovers. </p>
                   <p class="content">&nbsp;</p>
-                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, machine learning, and HCI papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove an article, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at mit dot edu). </p>
+                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, and machine learning papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove an article, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at cs dot cmu dot edu). We thank all the authors for their contribution and support.</p>
                   <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">GitHub</a></strong> | <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">CSV file</a></strong>
                   </p>
                </td>
@@ -140,6 +140,18 @@ Lin Lu,
 <a href="https://cfcs.pku.edu.cn/baoquan/">Baoquan Chen</a><br>
 In IEEE TVCG 2019<br>
 <strong><a href="https://ieeexplore.ieee.org/document/8703138">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="https://github.com/NVlabs/stylegan"><img src="teasers/Karras2019.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>A Style-Based Generator Architecture for Generative Adversarial Networks</strong>
+<p class="content"><a href="https://research.nvidia.com/person/tero-karras">Tero Karras</a>, 
+<a href="https://users.aalto.fi/~laines9/">Samuli Laine</a>, 
+<a href="https://research.nvidia.com/person/timo-aila">Timo Aila</a><br>
+In CVPR 2019<br>
+<strong><a href="https://arxiv.org/abs/1812.04948">[Paper]</a></strong> 
+<strong><a href="https://github.com/NVlabs/stylegan">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
