--- a/cat_papers.html
+++ b/cat_papers.html
@@ -143,6 +143,17 @@ In IEEE TVCG 2019<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="http://cvil.eecs.yorku.ca/projects/public_html/wb_emulation/index.html"><img src="teasers/Afifi2019.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>What Else Can Fool Deep Learning? Addressing Color Constancy Errors on Deep Neural Network Performance</strong>
+<p class="content"><a href="https://sites.google.com/view/mafifi">Mahmoud Afifi</a>, 
+<a href="http://www.cse.yorku.ca/~mbrown/">Michael S Brown</a><br>
+In ICCV 2019<br>
+<strong><a href="https://arxiv.org/pdf/1912.06960.pdf">[Paper]</a></strong> 
+<strong><a href="http://cvil.eecs.yorku.ca/projects/public_html/wb_emulation/index.html">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://github.com/NVlabs/stylegan"><img src="teasers/Karras2019.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>A Style-Based Generator Architecture for Generative Adversarial Networks</strong>
@@ -1267,7 +1278,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Sep 2019
+Last updated in Dec 2019
 <br>
 
       <div style="display:none">
