--- a/cat_papers.html
+++ b/cat_papers.html
@@ -118,7 +118,7 @@
                <td width="900" >
                   <p class="content">As reported by Cisco,  90% of net traffic will be visual, and indeed, most of the visual data are cat photos and videos. Thus, understanding, modeling, and synthesizing our feline friends becomes a more and more critical research problem these days, especially for our cat lovers. </p>
                   <p class="content">&nbsp;</p>
-                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, and machine learning papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove an article, please send an email to <strong><a href="people.csail.mit.edu/junyanz/">Jun-Yan Zhu</a></strong> (junyanz at cs dot cmu dot edu). We thank all the authors for their contribution and support.</p>
+                  <p class="content"><em>Cat Paper Collection </em>is an academic paper collection that includes computer graphics, computer vision, and machine learning papers that produce experimental results related to <strong>cats</strong>.  If you would like to add/remove an article, please send an email to <strong><a href="http://www.cs.cmu.edu/~junyanz">Jun-Yan Zhu</a></strong> (junyanz at cs dot cmu dot edu). We thank all the authors for their contribution and support.</p>
                   <p class="content"><br> See also <strong><a href="https://github.com/junyanz/CatPapers">GitHub</a></strong> | <strong> <a href ="https://github.com/junyanz/CatPapers/blob/master/data/reference.csv">CSV file</a></strong>
                   </p>
                </td>
@@ -299,7 +299,7 @@ In SIGGRAPH 2017<br>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Light Field Video Capture Using a Learning-Based Hybrid Imaging System</strong>
 <p class="content"><a href="https://people.eecs.berkeley.edu/~tcwang0509/">Ting-Chun Wang</a>, 
-<a href="https://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu</a>, 
+<a href="https://www.cs.cmu.edu/~junyanz/">Jun-Yan Zhu</a>, 
 <a href="http://nkhademi.com/">Nima Khademi Kalantari</a>, 
 <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a>, 
 <a href="http://cseweb.ucsd.edu/~ravir/">Ravi Ramamoorthi</a><br>
@@ -324,7 +324,7 @@ In NIPS 2017<br>
 <a href="https://junyanz.github.io/CycleGAN/"><img src="teasers/Zhu*2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks</strong>
-<p class="content"><a href="http://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu*</a>, 
+<p class="content"><a href="http://www.cs.cmu.edu/~junyanz/">Jun-Yan Zhu*</a>, 
 <a href="https://taesung.me/">Taesung Park*</a>, 
 <a href="http://people.eecs.berkeley.edu/~isola/">Phillip Isola</a>, 
 <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a><br>
@@ -349,7 +349,7 @@ In ICCV 2017<br>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Image-to-Image Translation with Conditional Adversarial Networks</strong>
 <p class="content"><a href="https://github.com/phillipi">Phillip Isola</a>, 
-<a href="https://people.eecs.berkeley.edu/~junyanz/">Jun-Yan Zhu</a>, 
+<a href="https://www.cs.cmu.edu/~junyanz/">Jun-Yan Zhu</a>, 
 <a href="https://people.eecs.berkeley.edu/~tinghuiz/">Tinghui Zhou</a>, 
 <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a><br>
 In CVPR 2017<br>
@@ -592,15 +592,15 @@ In SIGGRAPH 2014<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href="http://www.eecs.berkeley.edu/~junyanz/projects/averageExplorer/index.html"><img src="teasers/Zhu2014.jpg"/ border=1 width=210></a></td>
+<a href="https://www.cs.cmu.edu/~junyanz/projects/averageExplorer/index.html"><img src="teasers/Zhu2014.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>AverageExplorer: Interactive Exploration and Alignment of Visual Data Collections</strong>
-<p class="content"><a href="http://www.eecs.berkeley.edu/~junyanz">Jun-Yan Zhu</a>, 
+<p class="content"><a href="https://www.cs.cmu.edu/~junyanz">Jun-Yan Zhu</a>, 
 <a href="http://www.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a>, 
 <a href="http://www.eecs.berkeley.edu/~efros/">Alexei A. Efros</a><br>
 In SIGGRAPH 2014<br>
-<strong><a href="http://www.eecs.berkeley.edu/~junyanz/projects/averageExplorer/averageExplorer.pdf">[Paper]</a></strong> 
-<strong><a href="http://www.eecs.berkeley.edu/~junyanz/projects/averageExplorer/index.html">[Project]</a></strong>
+<strong><a href="https://www.cs.cmu.edu/~junyanz/projects/averageExplorer/averageExplorer.pdf">[Paper]</a></strong> 
+<strong><a href="https://www.cs.cmu.edu/~junyanz/projects/averageExplorer/index.html">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
@@ -1278,7 +1278,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Dec 2019
+Last updated in Aug 2020
 <br>
 
       <div style="display:none">
