--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,19 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="http://chengao.vision/FGVC/"><img src="teasers/Gao2020.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Flow-edge Guided Video Completion</strong>
+<p class="content"><a href="http://chengao.vision/">Chen Gao</a>, 
+Ayush Saraf, 
+<a href="https://filebox.ece.vt.edu/~jbhuang/">Jia-Bin Huang</a>, 
+<a href="https://johanneskopf.de/">Johannes Kopf</a><br>
+In ECCV 2020<br>
+<strong><a href="https://arxiv.org/pdf/2009.01835.pdf">[Paper]</a></strong> 
+<strong><a href="http://chengao.vision/FGVC/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://ieeexplore.ieee.org/document/8703138"><img src="teasers/Yan2019.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Strong 3D Printing by TPMS Injection</strong>
@@ -1278,7 +1291,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Aug 2020
+Last updated in Nov 2020
 <br>
 
       <div style="display:none">
