--- a/cat_papers.html
+++ b/cat_papers.html
@@ -142,6 +142,18 @@ In ECCV 2020<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="http://kaiyuyue.com/mgd/"><img src="teasers/Yue2020.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Matching Guided Distillation</strong>
+<p class="content"><a href="https://kaiyuyue.com/">Kaiyu Yue</a>, 
+Jiangfan Deng, 
+<a href="http://www.f-zhou.com/">Feng Zhou</a><br>
+In ECCV 2020<br>
+<strong><a href="https://arxiv.org/pdf/2008.09958.pdf">[Paper]</a></strong> 
+<strong><a href="http://kaiyuyue.com/mgd/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://ieeexplore.ieee.org/document/8703138"><img src="teasers/Yan2019.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Strong 3D Printing by TPMS Injection</strong>
@@ -1291,7 +1303,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Nov 2020
+Last updated in Dec 2020
 <br>
 
       <div style="display:none">
