--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,21 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://banmo-www.github.io/"><img src="teasers/Yang2022.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>BANMo: Building Animatable 3D Neural Models from Many Casual Videos</strong>
+<p class="content"><a href="https://gengshan-y.github.io/">Gengshan Yang</a>, 
+<a href="https://minhpvo.github.io/">Minh Vo</a>, 
+<a href="https://nneverova.github.io/">Natalia Neverova</a>, 
+<a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, 
+<a href="https://www.robots.ox.ac.uk/~vedaldi/">Andrea Vedaldi</a>, 
+<a href="https://jhugestar.github.io/">Hanbyul Joo</a><br>
+In CVPR 2022<br>
+<strong><a href="https://arxiv.org/abs/2112.12761">[Paper]</a></strong> 
+<strong><a href="https://banmo-www.github.io/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="http://chengao.vision/FGVC/"><img src="teasers/Gao2020.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Flow-edge Guided Video Completion</strong>
@@ -407,15 +422,15 @@ In CHI 2017<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
-<a href="https://joseph.nlpweb.org/CHI-revolt/"><img src="teasers/Chang2017.jpg"/ border=1 width=210></a></td>
+<a href="https://joe.cat/CHI-revolt/"><img src="teasers/Chang2017.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Revolt: Collaborative Crowdsourcing for Labeling Machine Learning Datasets</strong>
-<p class="content"><a href="https://joseph.nlpweb.org/">Joseph Chee Chang</a>, 
+<p class="content"><a href="https://joe.cat/">Joseph Chee Chang</a>, 
 <a href="http://saleemaamershi.com/">Saleema Amershi</a>, 
 <a href="https://www.ecekamar.com/">Ece Kamar</a><br>
 In CHI 2017<br>
-<strong><a href="https://joseph.nlpweb.org/images/papers/revolt-crowd-labeling.pdf">[Paper]</a></strong> 
-<strong><a href="https://joseph.nlpweb.org/CHI-revolt/">[Project]</a></strong>
+<strong><a href="https://joe.cat/images/papers/revolt-crowd-labeling.pdf">[Paper]</a></strong> 
+<strong><a href="https://joe.cat/CHI-revolt/">[Project]</a></strong>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
@@ -1303,7 +1318,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Dec 2020
+Last updated in May 2022
 <br>
 
       <div style="display:none">
