add Xiang2022 and Xiang2022b

--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,20 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/2203.08140"><img src="teasers/Xiang2022.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Learning Spatio-Temporal Downsampling for Effective Video Upscaling</strong>
+<p class="content"><a href="https://engineering.purdue.edu/people/xiaoyu.xiang.1">Xiaoyu Xiang</a>, 
+<a href="https://yapengtian.org/">Yapeng Tian</a>, 
+<a href="https://apvijay.github.io/">Vijay Rengarajan</a>, 
+Lucas Young, 
+<a href="https://scholar.google.com/citations?user=GwGsvm0AAAAJ&hl=en">Bo Zhu</a>, 
+Rakesh Ranjan<br>
+In ECCV 2022<br>
+<strong><a href="https://arxiv.org/abs/2203.08140">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://banmo-www.github.io/"><img src="teasers/Yang2022.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>BANMo: Building Animatable 3D Neural Models from Many Casual Videos</strong>
@@ -141,6 +155,23 @@
 In CVPR 2022<br>
 <strong><a href="https://arxiv.org/abs/2112.12761">[Paper]</a></strong> 
 <strong><a href="https://banmo-www.github.io/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
+<a href="https://arxiv.org/abs/2203.14863"><img src="teasers/Xiang2022b.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>HIME: Efficient Headshot Image Super-Resolution with Multiple Exemplars</strong>
+<p class="content"><a href="https://engineering.purdue.edu/people/xiaoyu.xiang.1">Xiaoyu Xiang</a>, 
+Jon Morton, 
+<a href="https://fitsumreda.github.io/">Fitsum A Reda</a>, 
+Lucas Young, 
+<a href="https://fperazzi.github.io/">Federico Perazzi</a>, 
+Rakesh Ranjan, 
+<a href="https://sites.google.com/view/amitumd/home?authuser=0">Amit Kumar</a>, 
+<a href="http://andreacolaco.info/">Andrea Colaco</a>, 
+<a href="https://engineering.purdue.edu/~allebach/">Jan Allebach</a><br>
+In ArXiv 2022<br>
+<strong><a href="https://arxiv.org/abs/2203.14863">[Paper]</a></strong> 
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
@@ -1318,7 +1349,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in May 2022
+Last updated in Jul 2022
 <br>
 
       <div style="display:none">
