--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,20 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/2304.12152"><img src="teasers/Jiang2023.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Efficient Halftoning via Deep Reinforcement Learning</strong>
+<p class="content">Haitian Jiang, 
+Dongliang Xiong, 
+Xiaowen Jiang, 
+Li Ding, 
+Liang Chen, 
+Kai Huang<br>
+In IEEE TIP 2023<br>
+<strong><a href="https://arxiv.org/abs/2304.12152">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/2203.08140"><img src="teasers/Xiang2022.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Learning Spatio-Temporal Downsampling for Effective Video Upscaling</strong>
@@ -167,9 +181,9 @@ Jon Morton,
 Lucas Young, 
 <a href="https://fperazzi.github.io/">Federico Perazzi</a>, 
 Rakesh Ranjan, 
-<a href="https://sites.google.com/view/amitumd/home?authuser=0">Amit Kumar</a>, 
-<a href="http://andreacolaco.info/">Andrea Colaco</a>, 
-<a href="https://engineering.purdue.edu/~allebach/">Jan Allebach</a><br>
+Amit Kumar, 
+Andrea Colaco, 
+Jan Allebach<br>
 In ArXiv 2022<br>
 <strong><a href="https://arxiv.org/abs/2203.14863">[Paper]</a></strong> 
 </p></tr></tbody></table><br>
@@ -1349,7 +1363,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Jul 2022
+Last updated in Oct 2023
 <br>
 
       <div style="display:none">
