--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,18 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/2311.17048"><img src="teasers/ "/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Zero-shot Referring Expression Comprehension via Structural Similarity Between Images and Captions</strong>
+<p class="content"><a href="https://show-han.github.io/">Zeyu Han</a>, 
+<a href="https://fangruizhu.github.io/">Fangrui Zhu</a>, 
+<a href="https://estherbear.github.io/">Qianru Lao</a>, 
+<a href="https://jianghz.me/">Huaizu Jiang</a><br>
+In CVPR 2024<br>
+<strong><a href="https://arxiv.org/abs/2311.17048">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/2304.12152"><img src="teasers/Jiang2023.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Efficient Halftoning via Deep Reinforcement Learning</strong>
@@ -1344,7 +1356,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Dec 2023
+Last updated in Mar 2024
 <br>
 
       <div style="display:none">
