--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,7 +129,7 @@
 <br>
 
 <table><tbody><tr><td>
-<a href="https://arxiv.org/abs/2311.17048"><img src="teasers/ "/ border=1 width=210></a></td>
+<a href="https://arxiv.org/abs/2311.17048"><img src="teasers/Han2024.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Zero-shot Referring Expression Comprehension via Structural Similarity Between Images and Captions</strong>
 <p class="content"><a href="https://show-han.github.io/">Zeyu Han</a>, 
