--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,19 @@
 <br>
 
 <table><tbody><tr><td>
+   <a href="https://arxiv.org/abs/2211.09324"><img src="teasers/Choi2023.jpg"/ border=1 width=210></a></td>
+   <td width="20"></td>
+   <td valign="middle" width="680"><strong>Blurring-Sharpening Process Models for Collaborative Filtering</strong>
+   <p class="content"><a href="https://jeongwhanchoi.me/">Jeongwhan Choi</a>, 
+   <a href="https://seoyoungh.github.io">Seoyoung Hong</a>, 
+   <a href="https://scholar.google.com/citations?user=VSuM3gYAAAAJ&hl=en">Noseong Park</a>, 
+   <a href="https://scholar.google.com/citations?user=px5LGgMAAAAJ&hl=en">Sung-Bae Cho</a><br>
+   In SIGIR 2023<br>
+   <strong><a href="https://arxiv.org/abs/2211.09324">[Paper]</a></strong> 
+   <strong><a href="https://github.com/jeongwhanchoi/bspm">[Project]</a></strong>
+   </p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/2311.17048"><img src="teasers/Han2024.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Zero-shot Referring Expression Comprehension via Structural Similarity Between Images and Captions</strong>
