--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,22 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://taohu.me/zigma/"><img src="teasers/Hu2024.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>ZIGMA: A DiT-style Zigzag Mamba Diffusion Model</strong>
+<p class="content"><a href="https://taohu.me/">Vincent Tao Hu</a>, 
+<a href="https://stefan-baumann.eu/">Stefan Andreas Baumann</a>, 
+<a href="https://www.linkedin.com/in/ming-gui-87b76a16b/?originalSubdomain=de">Ming Gui</a>, 
+<a href="https://www.linkedin.com/in/grebenkovao/">Olga Grebenkova</a>, 
+<a href="https://www.linkedin.com/in/pingchuan-ma-492543156/">Pingchuan Ma</a>, 
+<a href="https://www.linkedin.com/in/js-fischer/">Johannes Fischer</a>, 
+<a href="https://ommer-lab.com/people/ommer/">Björn Ommer</a><br>
+In ECCV 2024<br>
+<strong><a href="https://arxiv.org/abs/2403.13802">[Paper]</a></strong> 
+<strong><a href="https://taohu.me/zigma/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/2311.17048"><img src="teasers/Han2024.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Zero-shot Referring Expression Comprehension via Structural Similarity Between Images and Captions</strong>
@@ -1356,7 +1372,7 @@ In Psychological Review 1954<br>
 
 <br>
 
-Last updated in Mar 2024
+Last updated in Dec 2024
 <br>
 
       <div style="display:none">
