--- a/cat_papers.html
+++ b/cat_papers.html
@@ -157,6 +157,18 @@ In CVPR 2024<br>
 </p></tr></tbody></table><br>
 
 <table><tbody><tr><td>
+<a href="https://arxiv.org/abs/2211.09324"><img src="teasers/Choi2023.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>Blurring-Sharpening Process Models for Collaborative Filtering</strong>
+<p class="content"><a href="https://jeongwhanchoi.me/">Jeongwhan Choi</a>, 
+<a href="https://seoyoungh.github.io">Seoyoung Hong</a>, 
+<a href="https://scholar.google.com/citations?user=VSuM3gYAAAAJ&hl=en">Noseong Park</a>, 
+<a href="https://scholar.google.com/citations?user=px5LGgMAAAAJ&hl=en">Sung-Bae Cho</a><br>
+In SIGIR 2023<br>
+<strong><a href="https://arxiv.org/abs/2211.09324">[Paper]</a></strong> 
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://arxiv.org/abs/2304.12152"><img src="teasers/Jiang2023.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>Efficient Halftoning via Deep Reinforcement Learning</strong>
