--- a/cat_papers.html
+++ b/cat_papers.html
@@ -129,6 +129,17 @@
 <br>
 
 <table><tbody><tr><td>
+<a href="https://compvis.github.io/mask/"><img src="teasers/Hu2024b.jpg"/ border=1 width=210></a></td>
+<td width="20"></td>
+<td valign="middle" width="680"><strong>MASK is All You Need</strong>
+<p class="content"><a href="https://taohu.me/">Vincent Tao Hu</a>, 
+<a href="https://ommer-lab.com/people/ommer/">Björn Ommer</a><br>
+In arXiv 2024<br>
+<strong><a href="https://arxiv.org/abs/2412.06787">[Paper]</a></strong> 
+<strong><a href="https://compvis.github.io/mask/">[Project]</a></strong>
+</p></tr></tbody></table><br>
+
+<table><tbody><tr><td>
 <a href="https://taohu.me/zigma/"><img src="teasers/Hu2024.jpg"/ border=1 width=210></a></td>
 <td width="20"></td>
 <td valign="middle" width="680"><strong>ZIGMA: A DiT-style Zigzag Mamba Diffusion Model</strong>
