--- a/cat_papers.html
+++ b/cat_papers.html
@@ -133,7 +133,8 @@
 <td width="20"></td>
 <td valign="middle" width="680"><strong>MASK is All You Need</strong>
 <p class="content"><a href="https://taohu.me/">Vincent Tao Hu</a>, 
-<a href="https://ommer-lab.com/people/ommer/">Björn Ommer</a><br>
+Bj&#246, 
+<a href="https://ommer-lab.com/people/ommer/">rn Ommer</a><br>
 In arXiv 2024<br>
 <strong><a href="https://arxiv.org/abs/2412.06787">[Paper]</a></strong> 
 <strong><a href="https://compvis.github.io/mask/">[Project]</a></strong>
@@ -149,7 +150,8 @@ In arXiv 2024<br>
 <a href="https://www.linkedin.com/in/grebenkovao/">Olga Grebenkova</a>, 
 <a href="https://www.linkedin.com/in/pingchuan-ma-492543156/">Pingchuan Ma</a>, 
 <a href="https://www.linkedin.com/in/js-fischer/">Johannes Fischer</a>, 
-<a href="https://ommer-lab.com/people/ommer/">Björn Ommer</a><br>
+Bj&#246, 
+<a href="https://ommer-lab.com/people/ommer/">rn Ommer</a><br>
 In ECCV 2024<br>
 <strong><a href="https://arxiv.org/abs/2403.13802">[Paper]</a></strong> 
 <strong><a href="https://taohu.me/zigma/">[Project]</a></strong>
